--- a/styles.css
+++ b/styles.css
@@ -284,7 +284,11 @@ hr {
 }
 
 .back-button {
-  bottom: 20px;
+  position: fixed;
+  right: 20px;
+
+  bottom: 40px;
+  display: none;
   margin: 0 auto;
   background-color: rgb(33, 4, 79);
   color: white;
@@ -294,9 +298,7 @@ hr {
   height: 50px;
   font-size: 2rem;
   cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   transition: background-color 0.3s ease-in-out;
 }
@@ -341,5 +343,13 @@ hr {
     width: 100px;
     font-size: 1.8rem;
     padding: 5px;
+  }
+  .photo-name {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .myPhoto {
+    width: 100px;
+    height: 100px;
   }
 }
